# rust-market-ledger

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  stop_nodes.sh
.github/workflows/: ci.yml  gh-pages.yml
docs/: index.html
examples/: README.md  comparison_example.rs  metrics_comparison_example.rs  no_consensus_example.rs  pbft_baseline_example.rs  run_all_comparisons.rs  simple_majority_example.rs  trilemma_comparison.rs
examples/shared/: mod.rs
scripts/: color_map.sh  extract_and_update_results.sh  install_rust.sh  query_db.sh  start_nodes.sh  stop_nodes.sh  test_offline.sh  test_sqlite.sh  update_html_from_results.py
src/: lib.rs  logger.rs  main.rs
src/consensus/: comparison.rs  examples.rs  mod.rs  tests.rs  traits.rs  types.rs
src/consensus/algorithms/: eventual.rs  flexible_paxos.rs  gossip.rs  mod.rs  pbft.rs  pbft_impl.rs  quorumless.rs
src/etl/: extract.rs  load.rs  mod.rs  transform.rs  validator.rs
src/network/: mod.rs
src/pbft/: mod.rs
